gcc/testsuite/rust/rustc/ui/parser/issues/issue-102182-impl-trait-recover.rs
fn foo<T: impl Trait>() {}
// { dg-error "" "" { target *-*-* } .-1 }
fn main() {}

